# gpu

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
CannonicalStore/: CMakeLists.txt
CannonicalStore/LSlab/: CMakeLists.txt
CannonicalStore/LSlab/include/: Slab.cuh  StandardSlabDefinitions.cuh  gpuErrchk.cuh  gpumemory.cuh  stdrequestHandler.cuh
CanonicalStore/: CMakeLists.txt
CanonicalStore/Allocator/: CMakeLists.txt
CanonicalStore/BTree/: .gitignore  CMakeLists.txt  README.md
CanonicalStore/BTree/src/: GpuBTree.h  global.cuh  utils.cuh
CanonicalStore/BTree/src/allocator/: bool_allocator.cuh
CanonicalStore/BTree/src/map/: GpuBTree.cuh  SecondaryIndex.cuh
CanonicalStore/BTree/src/map/kernels/: map_kernels.cuh  map_warps.cuh
CanonicalStore/BTree/test/: CMakeLists.txt
CanonicalStore/BTree/unittests/: CMakeLists.txt
CanonicalStore/CanonicalStoreInterface/: CMakeLists.txt
CanonicalStore/CanonicalStoreInterface/include/: BTrees.cuh  Slabs.cuh  StatData.cuh
CanonicalStore/LSlab/: CMakeLists.txt
CanonicalStore/LSlab/include/: Operations.cuh
Communication/: CMakeLists.txt
Communication/include/: Communication.hh
HotCache/: CMakeLists.txt
HotCache/HotCacheInterface/: CMakeLists.txt
HotCache/HotCacheInterface/include/: Cache.cuh  Cache.hh
HotCache/KVCache/: CMakeLists.txt
HotCache/KVCache/benchmark/: KVCache_benchmark.cc  KVCache_benchmark.cu  KVCache_tail_latency.cc
HotCache/KVCache/include/: KVCache.cuh  KVCache.hh
HotCache/include/: KVCache.cuh
KVStore/: CMakeLists.txt
KVStore/include/: Cache.cuh  KVStore.cuh  KVStoreClient.cuh  KVStoreCtx.cuh  KVStoreInternalClient.cuh  Slabs.cuh  kvcg.cuh
Model/: CMakeLists.txt
Model/include/: Model.hh
benchmark/: CMakeLists.txt  learnDistribution.cu  megakv_server.cu  mkvuniformWorkload.cu  mkvzipfianWorkload.cu  server.cu  server_old.cu  zipfianWorkload.cu  zipfianWorkloadSwitch.cu
commonInterfaces/: CMakeLists.txt
commonInterfaces/include/: BatchData.hh  ImportantDefinitions.hh  Messages.hh  RequestTypes.hh  ResultsBuffers.hh  data_t.hh
commonInterfaces/includeCUDA/: BatchData.cuh  Compare.cuh  gpuSystemConfig.cuh
docs/: CMakeLists.txt  Doxyfile.in
rand/: CMakeLists.txt
rand/include/: zipf.hh
rand/src/: zipf.cpp
rand/test/: zipf_test.cpp
scripts/: btree.sh  changingHotPercent.sh  changingTheta.sh  changingValueSize.sh  changingValueSize99.sh  changingWorkload.sh  runAll.sh  scalingGPUs.sh  writeSettings.sh
service/: server.cu  zipfianWorkload.cu  zipfianWorkloadSwitch.cu
