add_library(model INTERFACE)
target_include_directories(model INTERFACE include)
target_link_libraries(model INTERFACE Boost::boost)

get_target_property(PUBLIC_HEADER_DIR_MODEL model INTERFACE_INCLUDE_DIRECTORIES)
file(GLOB_RECURSE PUBLIC_HEADERS_MODEL ${PUBLIC_HEADER_DIR_MODEL}/*)
set(DOXYGEN_INPUT_DIR "${DOXYGEN_INPUT_DIR} ${PUBLIC_HEADER_DIR_MODEL}" PARENT_SCOPE)
set(DOXYGEN_PUBLIC_HEADERS "${DOXYGEN_PUBLIC_HEADERS};${PUBLIC_HEADERS_MODEL}" PARENT_SCOPE)
