add_executable(kvcg server.cu)
target_link_libraries(kvcg PUBLIC lslab)
target_link_libraries(kvcg PUBLIC pthread)
target_link_libraries(kvcg PUBLIC kvstore)
target_link_libraries(kvcg PUBLIC tbbmalloc_proxy)
target_link_libraries(kvcg PUBLIC Boost::boost)

add_library(zipfianWorkload SHARED zipfianWorkload.cu)
target_link_libraries(zipfianWorkload PRIVATE kvstore)
target_link_libraries(zipfianWorkload PRIVATE tbbmalloc_proxy)
target_link_libraries(zipfianWorkload PRIVATE rand)
target_link_libraries(zipfianWorkload PRIVATE Boost::boost)

add_library(zipfianWorkloadSwitch SHARED zipfianWorkloadSwitch.cu)
target_link_libraries(zipfianWorkloadSwitch PRIVATE kvstore)
target_link_libraries(zipfianWorkloadSwitch PRIVATE tbbmalloc_proxy)
target_link_libraries(zipfianWorkloadSwitch PRIVATE rand)
target_link_libraries(zipfianWorkloadSwitch PRIVATE Boost::boost)

add_library(uniformWorkload SHARED uniformWorkload.cu)
target_link_libraries(uniformWorkload PRIVATE kvstore)
target_link_libraries(uniformWorkload PRIVATE tbbmalloc_proxy)
target_link_libraries(uniformWorkload PRIVATE rand)
target_link_libraries(uniformWorkload PRIVATE Boost::boost)

add_library(selfsimilarWorkload SHARED selfsimilarWorkload.cu)
target_link_libraries(selfsimilarWorkload PRIVATE kvstore)
target_link_libraries(selfsimilarWorkload PRIVATE tbbmalloc_proxy)
target_link_libraries(selfsimilarWorkload PRIVATE rand)
target_link_libraries(selfsimilarWorkload PRIVATE Boost::boost)
