add_library(allocator INTERFACE)
target_include_directories(allocator INTERFACE include)

get_target_property(PUBLIC_HEADER_DIR_ALLOCATOR allocator INTERFACE_INCLUDE_DIRECTORIES)
file(GLOB_RECURSE PUBLIC_HEADERS_ALLOCATOR ${PUBLIC_HEADER_DIR_ALLOCATOR}/*)

set(DOXYGEN_INPUT_DIR "${DOXYGEN_INPUT_DIR} ${PUBLIC_HEADER_DIR_ALLOCATOR}" PARENT_SCOPE)

set(DOXYGEN_PUBLIC_HEADERS "${DOXYGEN_PUBLIC_HEADERS};${PUBLIC_HEADERS_ALLOCATOR}" PARENT_SCOPE)
